--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
     <div id="main">
         {% autoescape None %}
-        <p>{{graph}}</p>
+        <p>{{graph_01}}</p>
      </div>
 </body>
 </html>
